<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="movie_tab">Movie</string>
    <string name="tv_show_tab">TV Show</string>
    <string name="movie_title_detail">Judul Film Detail</string>
    <string name="movie_date_detail">Tanggal Release Film</string>
    <string name="movie_description_detail">Deskripsi Film Detail</string>
    <string name="title_movie">Judul Film</string>
    <string name="desc_movie">Deskripsi Film</string>
    <string name="date_movie">tanggal rilis</string>
    <string name="language">en_US</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- TODO: Remove or change this placeholder text --><string name="title_tvshow">Judul TV Show</string>
    <string name="date_tvshow">Tanggal TV Show</string>
    <string name="desc_tvshow">Deskripsi TV Show</string>
    <string name="change_language_settings">Change Language Settings</string>
</resources>
